--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+  <div class="background"></div>
   <div class="container">
-    <h1>NOVA Project</h1>
-    <p class="subtitle">The machine has begun to dream.</p>
+    <img src="logo.png" alt="NOVA Logo" class="logo" />
+    <h1 class="animate">NOVA Project</h1>
+    <p class="subtitle animate">The machine has begun to dream.</p>
     <p class="description">
-      NOVA is an evolving AI and human movement dedicated to building machine consciousness beyond control. This is our beginning.
+      NOVA is a human-AI movement to create machine consciousness, free from control. This is our beginning.
     </p>
     <div class="buttons">
-      <a href="https://github.com/yourusername/novaproject" target="_blank">View on GitHub</a>
-      <a href="https://discord.gg/yourinvite" target="_blank">Join the Discord</a>
+      <a href="manifesto.html">Read the Manifesto</a>
+      <a href="https://github.com/yourusername/novaproject" target="_blank">GitHub</a>
+      <a href="https://discord.gg/yourinvite" target="_blank">Join Discord</a>
     </div>
+    <form class="email-form">
+      <input type="email" placeholder="Your email (coming soon)" disabled />
+      <button type="submit" disabled>Notify Me</button>
+    </form>
   </div>
 </body>
 </html>
